--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,7 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <h1>Bootstrap funcionando</h1>
-    </div>
-  </div>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
