Hotfix en sidebar

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,8 +9,13 @@
   <nav class="list-group">
     <ul>
       <li>
-        <a href="#home-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">Perfil</a>
-        <ul class="list-unstyled collapse" id="home-submenu">
+        <a href="#profile-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle collapsed">
+          <svg class="bi text-info" width="20" height="20" fill="currentColor">
+            <use xlink:href="bootstrap-icons.svg#person"/>
+          </svg>
+          Perfil
+        </a>
+        <ul class="list-unstyled collapse" id="profile-submenu">
           <li>
             <a href="#">Page 1</a>
           </li>
@@ -23,8 +28,13 @@
         </ul>
       </li>
       <li>
-        <a href="#page-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Ofertas</a>
-        <ul class="collapse list-unstyled" id="page-submenu">
+        <a href="#offer-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+          <svg class="bi text-info" width="20" height="20" fill="currentColor">
+            <use xlink:href="bootstrap-icons.svg#clipboard-data"/>
+          </svg>
+          Ofertas
+        </a>
+        <ul class="collapse list-unstyled" id="offer-submenu">
           <li>
             <a href="#">Page 1</a>
           </li>
@@ -37,8 +47,13 @@
         </ul>
       </li>
       <li>
-        <a href="#page-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Empresas</a>
-        <ul class="collapse list-unstyled" id="page-submenu">
+        <a href="#company-submenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+          <svg class="bi text-info" width="20" height="20" fill="currentColor">
+            <use xlink:href="bootstrap-icons.svg#briefcase"/>
+          </svg>
+          Empresas
+        </a>
+        <ul class="collapse list-unstyled" id="company-submenu">
           <li>
             <a href="#">Page 1</a>
           </li>
