--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -1,4 +1,4 @@
-<form novalidate class="mt-3" (ngSubmit)="onSave()" [formGroup]="contactForm">
+<form novalidate (ngSubmit)="onSave()" [formGroup]="contactForm">
     <div class="form-row">
         <div class="form-group col-md-6">
             <input type="text" class="form-control" placeholder="Nombre" formControlName="name" [class]="isValidField('name')">
@@ -7,12 +7,22 @@
                     Por favor introduzca su nombre
                 </span>
             </div>
+            <div class="invalid-feedback">
+                <span *ngIf="contactForm.get('name').errors?.pattern">
+                    Por favor introduzca su nombre correctamente
+                </span>
+            </div>
         </div>
         <div class="form-group col-md-6">
             <input type="text" class="form-control" placeholder="Apellido" formControlName="lastName" [class]="isValidField('lastName')">
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('lastName').errors?.required">
                     Por favor introduzca su apellido
+                </span>
+            </div>
+            <div class="invalid-feedback">
+                <span *ngIf="contactForm.get('lastName').errors?.pattern">
+                    Por favor introduzca sus apellidos correctamente
                 </span>
             </div>
         </div>
@@ -25,47 +35,52 @@
                     Por favor introduzca su dni
                 </span>
             </div>
+            <div class="invalid-feedback">
+                <span *ngIf="contactForm.get('dni').errors?.pattern">
+                    Por favor introduzca su DNI correctamente
+                </span>
+            </div>
         </div>
         <div class="input-group col-md-6">
-            <input class="form-control" placeholder="yyyy-mm-dd"
+            <input class="form-control" placeholder="Fecha de nacimiento"
                 formControlName="birthdate" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
             <div class="input-group-append">
                 <!--Poner icono manual-->
-              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+              <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button"><i class="bi bi-calendar-date"></i></button>              
             </div>
             <div class="invalid-feedback">
                 <span *ngIf="contactForm.get('birthdate').errors?.required">
                     Debe introducir una fecha
+                </span>                
+            </div>            
+        </div>
+        <div class="form-group col-md-6">
+            <label>Rama</label>
+            <select formControlName="studies" class="form-control" [class]="isValidField('studies')">
+                <option value="informatica">Informatica</option>
+                <option value="comercio">Comercio</option>
+            </select>
+            <div class="invalid-feedback">
+                <span *ngIf="contactForm.get('studies').errors?.required">
+                    Debe elegir una opción
                 </span>
             </div>
-        </div>
-    </div>
-    <div class="form-group col-md-6">
-        <label>Rama</label>
-        <select formControlName="studies" class="ml-3" [class]="isValidField('studies')">
-            <option value="informatica">Informatica</option>
-            <option value="comercio">Comercio</option>
-        </select>
-        <div class="invalid-feedback">
-            <span *ngIf="contactForm.get('studies').errors?.required">
-                Debe elegir una opción
-            </span>
-        </div>
+        </div>        
     </div>
     <div class="form-group">
         <label>Aptitudes</label>
-        <textarea rows="3" class="form-control" formControlName="message" [class]="isValidField('message')"></textarea>
+        <textarea rows="3" class="form-control" formControlName="aptitudes" [class]="isValidField('aptitudes')"></textarea>
         <div class="invalid-feedback">
-            <span *ngIf="contactForm.get('message').errors?.required">
-                Por favor introduce un mensaje
+            <span *ngIf="contactForm.get('aptitudes').errors?.required">
+                Por favor introduzca sus aptitudes
             </span>
-            <span *ngIf="contactForm.get('message').errors?.minlength">
-                El mensaje debe ser mas grande de {{contactForm.get('message').errors?.minlength?.requiredLesngth}}
+            <span *ngIf="contactForm.get('aptitudes').errors?.minlength">
+                Sus aptitudes deben contener mas de {{contactForm.get('aptitudes').errors?.minlength?.requiredLength}} carácteres
             </span>    
-            <span *ngIf="contactForm.get('message').errors?.maxlength">
-                El mensaje debe ser mas pequeño o igual a {{contactForm.get('message').errors?.maxlength?.requiredLength}}
+            <span *ngIf="contactForm.get('aptitudes').errors?.maxlength">
+                Sus aptitudes deben contener máximo {{contactForm.get('aptitudes').errors?.maxlength?.requiredLength}} carácteres
             </span>             
         </div>
-    </div>
+    </div>    
     <button type="submit" class="btn btn-primary btn-block">Confirmar</button>
 </form>
