Avance con errores
Creación dashbord de la empresa, vista de ofertas y primer diseño para añadir oferta nueva.
Primero diseño de tarjetas de ofertas e implementación de modales en ofertas

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Contenedor del contenido de la parte intentar de la web */
+#page-content-wrapper {
+    width: 100%;
+}
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
