--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -19,7 +19,7 @@
           <div class="card w-100 mb-4 shadow">
             <div class="card-header bg-info">
               <h2 class="card-title text-white font-weight-bold my-2">Ofertas publicadas</h2>
-              <a class="rounded-circle position-absolute border border-white bg-info" (click)=open(content)>
+              <a class="rounded-circle position-absolute border border-white bg-info" (click)=offerNew(offerN)>
                 <svg class="bi text-white" width="32" height="32" fill="currentColor">
                   <use xlink:href="bootstrap-icons.svg#plus" />
                 </svg>
@@ -40,12 +40,17 @@
                     </div>
                     <div class="card-footer d-flex flex-row p-1">
                       <button type="button" class="btn btn-info mr-2">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor">
+                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerUpdate(offerU)>
                           <use xlink:href="bootstrap-icons.svg#pencil" />
                         </svg>
                       </button>
+                      <button type="button" class="btn btn-warning mr-2">
+                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDuplicate(offerD)>
+                          <use xlink:href="bootstrap-icons.svg#files" />
+                        </svg>
+                      </button>
                       <button type="button" class="btn btn-danger">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor">
+                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDelete(offerDel)>
                           <use xlink:href="bootstrap-icons.svg#x" />
                         </svg>
                       </button>
@@ -63,24 +68,118 @@
   </div>
 </div>
 
-<ng-template #content let-modal>
-    <div class="modal-header">
-      <h4 class="modal-title" id="modal-basic-title">Nueva oferta</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <form>
-        <div class="form-group">
-          <label for="firstname">Nombre</label>
-          <div class="input-group">
-            <input id="firstname" class="form-control" >
-          </div>
-        </div>
-      </form>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Guardar</button>
-    </div>
-  </ng-template>
+<!-- Modal con el registro de una nueva oferta -->
+<ng-template #offerN let-modal>
+  <div class="modal-header bg-info text-white">
+    <h4 class="modal-title" id="modal-basic-title">Nueva oferta</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <svg class="bi text-white" width="32" height="32" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+  <div class="modal-body">
+    <app-offer-register></app-offer-register>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-info" (click)="modal.close('Save click')">
+      Guardar
+      <svg class="bi text-white" width="14" height="14" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#save" />
+      </svg>
+    </button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">
+      Cancelar
+      <svg class="bi text-white" width="20" height="20" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+</ng-template>
+
+<!-- Modal para modificar oferta -->
+<ng-template #offerU let-modal>
+  <div class="modal-header bg-info text-white">
+    <h4 class="modal-title" id="modal-basic-title">Modificar oferta</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <svg class="bi text-white" width="32" height="32" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+  <div class="modal-body">
+    <app-offer-register></app-offer-register>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-info" (click)="modal.close('Save click')">
+      Guardar
+      <svg class="bi text-white" width="14" height="14" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#save" />
+      </svg>
+    </button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">
+      Cancelar
+      <svg class="bi text-white" width="20" height="20" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+</ng-template>
+
+<!-- Modal para duplicar oferta -->
+<ng-template #offerD let-modal>
+  <div class="modal-header bg-info text-white">
+    <h4 class="modal-title" id="modal-basic-title">Duplicar oferta</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <svg class="bi text-white" width="32" height="32" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+  <div class="modal-body">
+    <app-offer-register></app-offer-register>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-info" (click)="modal.close('Save click')">
+      Guardar
+      <svg class="bi text-white" width="14" height="14" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#save" />
+      </svg>
+    </button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">
+      Cancelar
+      <svg class="bi text-white" width="20" height="20" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+</ng-template>
+
+<!-- Modal para Borrar oferta -->
+<ng-template #offerDel let-modal>
+  <div class="modal-header bg-info text-white">
+    <h4 class="modal-title" id="modal-basic-title">Duplicar oferta</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <svg class="bi text-white" width="32" height="32" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+  <div class="modal-body">
+    ¿Estas seguro que quieres borrar esta oferta?
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-info" (click)="modal.close('Save click')">
+      Guardar
+      <svg class="bi text-white" width="14" height="14" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#save" />
+      </svg>
+    </button>
+    <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">
+      Cancelar
+      <svg class="bi text-white" width="20" height="20" fill="currentColor">
+        <use xlink:href="bootstrap-icons.svg#x" />
+      </svg>
+    </button>
+  </div>
+</ng-template>
