--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -36,7 +36,7 @@
         </a>
         <ul class="collapse list-unstyled" id="offer-submenu">
           <li>
-            <a href="#">Page 1</a>
+            <a routerLink="/empresa/ofertas">Mis ofertas</a>
           </li>
           <li>
             <a href="#">Page 2</a>
