Conexion con laravel inicial
(no funcional)

--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="form-group col-md-6">
             <div class="input-group">
-                <input class="form-control" placeholder="Fecha de nacimiento"
+                <input type="text" class="form-control" placeholder="Fecha de nacimiento"
                 formControlName="birthdate" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
                 <div class="input-group-append ">
                     <!--Poner icono manual-->
