Completar perfil de empresa

--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -1,13 +1,73 @@
 <form novalidate class="mt-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label for="email">E-mail:</label>
-            <input type="email" class="form-control" name="email" id="email" placeholder="Introduzca su e-mail" formcontrolname="email">
+            <input type="text" class="form-control" placeholder="CIF" formControlName="cif" [class]="isValidField('cif')">
+            <div class="invalid-feedback">
+                <span *ngIf="companyInfoForm.get('cif').errors?.required">
+                    Por favor introduzca su CIF
+                </span>
+            </div>
+            <div class="invalid-feedback">
+                <span *ngIf="companyInfoForm.get('cif').errors?.pattern">
+                    Por favor introduzca su CIF correctamente
+                </span>
+            </div>
         </div>
         <div class="form-group col-md-6">
-            <label for="password">Contraseña:</label>
-            <input type="password" class="form-control" name="password" id="password" placeholder="Introduzca su contraseña" formcontrolname="password">
+            <input type="text" class="form-control" placeholder="Nombre" formControlName="name" [class]="isValidField('name')">
+            <div class=" invalid-feedback ">
+                <span *ngIf="companyInfoForm.get( 'name').errors?.required ">
+                    Por favor introduzca su nombre
+                </span>
+            </div>
+            <div class="invalid-feedback ">
+                <span *ngIf="companyInfoForm.get( 'name').errors?.pattern ">
+                    Por favor introduzca su nombre correctamente
+                </span>
+            </div>
         </div>
+        <div class="form-row ">
+            <div class="form-group col-md-6 ">
+                <input type="text " class="form-control " placeholder="Sector de trabajo " formControlName="sector " [class]="isValidField( 'sector') ">
+                <div class="invalid-feedback ">
+                    <span *ngIf="companyInfoForm.get( 'sector').errors?.required ">
+                    Por favor introduzca su sector de trabajo
+                </span>
+                </div>
+                <div class="invalid-feedback ">
+                    <span *ngIf="companyInfoForm.get( 'sector').errors?.pattern ">
+                    Por favor introduzca su sector correctamente
+                </span>
+                </div>
+            </div>
+            <div class="form-group col-md-6 ">
+                <div class="input-group">
+                    <input class="form-control" placeholder="yyyy-mm-dd" formControlName="birthdate" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" [class]="isValidField('birthdate')">
+                    <div class="input-group-append">
+                        <!--Poner icono manual-->
+                        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
+                       <svg class="bi text-info" width="23" height="23" fill="currentColor">
+                            <use xlink:href="bootstrap-icons.svg#calendar-date" />
+                        </svg>
+                    </button>
+                    </div>
+                </div>
+                <div class="invalid-feedback">
+                    <span *ngIf="companyInfoForm.get('birthdate').errors?.required">
+                    Debe introducir una fecha
+                </span>
+                </div>
+            </div>
+            <div class="form-group col-md-6 ">
+                <label>Rama</label>
+                <input type="text " name="description " class="form-control " placeholder="Introduce una breve descripcion de la empresa" [class]="isValidField( 'description') ">
+                <div class="invalid-feedback ">
+                    <span *ngIf="companyInfoForm.get( 'description').errors?.required ">
+                    Debe describir su empresa
+                </span>
+                </div>
+            </div>
+        </div>
+        <button type="submit " class="btn btn-primary btn-block ">Confirmar</button>
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
