--- a/src/app/pages/company/crear-perfil/crear-perfil.component.html
+++ b/src/app/pages/company/crear-perfil/crear-perfil.component.html
@@ -1,4 +1,4 @@
-<form novalidate class="mt-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
+<form novalidate class="mt-4 mb-4" (ngSubmit)="onSave()" [formGroup]="companyInfoForm">
     <div class="form-row">
         <div class="form-group col-md-4">
             <label>CIF:</label>
@@ -51,7 +51,7 @@
                 <div class="input-group-append">
                     <!--Poner icono manual-->
                     <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button">
-                       <svg class="bi text-info" width="23" height="23" fill="currentColor">
+                       <svg class="bi text-info" width="18" height="18" fill="currentColor">
                             <use xlink:href="bootstrap-icons.svg#calendar-date" />
                         </svg>
                     </button>
