Añadida img y tamaño al modal

--- a/src/app/pages/alumno/student-company-view/modal/company-data-m/company-data-m.component.html
+++ b/src/app/pages/alumno/student-company-view/modal/company-data-m/company-data-m.component.html
@@ -7,7 +7,9 @@
     </button>
 </div>
 <div class="modal-body">
-    <p>Datos de empresa</p>
+    <h5>Descripcion</h5>
+    <img src="https://image.freepik.com/vector-gratis/exito-empresa-buen-concepto-trabajo-equipo_81522-3909.jpg" 
+    alt="imagen-empresa" class="img-fluid w-50 h-50 mx-3 d-inline-flex float-left">
     Lorem fistrum diodeno a gramenawer caballo blanco caballo negroorl hasta luego Lucas te va a hasé pupitaa te va a
     hasé pupitaa te va a hasé pupitaa benemeritaar. Tiene musho peligro a wan diodeno hasta luego Lucas de la pradera
     torpedo papaar papaar diodeno va usté muy cargadoo qué dise usteer. Benemeritaar ese pedazo de a gramenawer jarl ese
