--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,26 +1,26 @@
-<div class="container m-3">
+<div class="container my-3">
   <div class="row justify-content-center">
     <div class="col-md-6">
         <div class="card">
-            <div class="card-header">
-                <h2 class="card-title">Acceso</h2>
+            <div class="card-header  bg-info ">
+                <h2 class="card-title text-white mb-0">Acceso</h2>
             </div>
             <div class="card-body">
-                <form [formGroup]="nuevoLogin" (ngSubmit)="onSubmit()">
+                <form [formGroup]="newLogin" (ngSubmit)="onSubmit()">
                     <div class="form-group">
-                      <label>Usuario</label>
-                      <input type="text" formControlName="usuario" class="form-control"/>
-                      <div *ngIf="submitted && formulario.usuario.errors">
+                      <label>Email</label>
+                      <input type="text" formControlName="email" class="form-control"/>
+                      <div *ngIf="submitted && form.email.errors">
                         <div>El usuario: </div>
-                        <div *ngIf="formulario.usuario.errors.required">No puede estar vacío</div>
+                        <div *ngIf="form.email.errors.required">No puede estar vacío</div>
                       </div>
                     </div>
                     <div class="form-group">
                       <label>Password</label>
                       <input type="text" formControlName="password" class="form-control"/>
-                      <div *ngIf="submitted && formulario.password.errors">
+                      <div *ngIf="submitted && form.password.errors">
                         <div>La password: </div>
-                        <div *ngIf="formulario.password.errors.required">No puede estar vacío</div>
+                        <div *ngIf="form.password.errors.required">No puede estar vacío</div>
                       </div>
                     </div>
             
