--- a/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
+++ b/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
@@ -35,7 +35,7 @@
     <div class="form-group">
       <label>Descripción</label>
       <div class="text-group">
-        <input id="description" class="form-control" formControlName="description">
+        <textarea id="description" class="form-control" formControlName="description"></textarea>
       </div>
     </div>
     <div class="text-right">
