--- a/src/app/pages/company/company-offer/modal/offer-update/offer-update.component.html
+++ b/src/app/pages/company/company-offer/modal/offer-update/offer-update.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header bg-info text-white">
-  <h4 class="modal-title" id="modal-basic-title">Modificar oferta oferta {{offer}}</h4>
+  <h4 class="modal-title" id="modal-basic-title">Modificar oferta</h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.close('Cross click')">
     <svg class="bi text-white" width="32" height="32" fill="currentColor">
       <use xlink:href="bootstrap-icons.svg#x" />
@@ -11,31 +11,31 @@
     <div class="form-group">
       <label for="firstname">Nombre de la oferta</label>
       <div class="input-group">
-        <input id="name" class="form-control" formControlName="name">
+        <input id="name" class="form-control" formControlName="name" [(ngModel)]="offer.name">
       </div>
     </div>
     <div class="form-group">
       <label for="lastname">Vacantes</label>
       <div class="input-group">
-        <input id="vacant" class="form-control" formControlName="vacant">
+        <input id="vacant" class="form-control" formControlName="vacant" [(ngModel)]="offer.vacant">
       </div>
     </div>
     <div class="form-group">
       <label for="department">Fecha inicio</label>
       <div class="input-group">
-        <input type="date" id="starDate" class="form-control" formControlName="startDate">
+        <input type="date" id="starDate" class="form-control" formControlName="startDate" [(ngModel)]="offer.startDate">
       </div>
     </div>
     <div class="form-group">
       <label>Fecha de fin</label>
       <div class="input-group">
-        <input type="date" id="email2" class="form-control" formControlName="endDate">
+        <input type="date" id="email2" class="form-control" formControlName="endDate" [(ngModel)]="offer.endDate">
       </div>
     </div>
     <div class="form-group">
       <label>Descripción</label>
       <div class="text-group">
-        <input id="description" class="form-control" formControlName="description">
+        <textarea id="description" class="form-control" formControlName="description" [(ngModel)]="offer.description"></textarea>
       </div>
     </div>
     <div class="text-right">
