--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,14 +11,14 @@
   <!-- Menu -->
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item">
+      <li *ngIf="!isLogin()" class="nav-item">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li class="nav-item">
+      <li *ngIf="!isLogin()" class="nav-item">
         <a class="nav-link" href="#">Registro</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Salir
+      <li *ngIf="isLogin()" class="nav-item">
+        <a class="nav-link" (click)="onLogout()" role="button">Salir
           <svg class="bi text-white" width="16" height="16" fill="currentColor">
             <use xlink:href="bootstrap-icons.svg#box-arrow-right" />
           </svg>
