--- a/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
+++ b/src/app/pages/company/company-offer/modal/offer-new/offer-new.component.html
@@ -7,7 +7,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <form novalidate (ngSubmit)="onSave()" [formGroup]="contactForm">
+  <form novalidate (ngSubmit)="onSubmit()" [formGroup]="contactForm">
     <div class="form-group">
       <label for="firstname">Nombre de la oferta</label>
       <div class="input-group">
