offer delete ok

--- a/src/app/pages/company/company-offer/company-offer.component.html
+++ b/src/app/pages/company/company-offer/company-offer.component.html
@@ -48,7 +48,7 @@
                         </svg>
                       </button>
                       <button type="button" class="btn btn-danger">
-                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDelete(offerDel)>
+                        <svg class="bi text-white" width="26" height="26" fill="currentColor" (click)=offerDelete(offer.id)>
                           <use xlink:href="bootstrap-icons.svg#x" />
                         </svg>
                       </button>
