--- a/src/app/pages/alumno/perfil/perfil-al.component.html
+++ b/src/app/pages/alumno/perfil/perfil-al.component.html
@@ -65,6 +65,22 @@
                         Debe introducir una fecha
                     </span>
                 </div>
+            </div>            
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6"> 
+                <label>Telefono móvil</label>               
+                <input type="text" formControlName="phone" class="form-control" [class]="isValidField('phone')">                    
+                <div class="invalid-feedback">
+                    <span *ngIf="contactForm.get('phone').errors?.required">
+                        Debe introducir un número de móvil
+                    </span>
+                </div>
+                <div class="invalid-feedback">
+                    <span *ngIf="contactForm.get('phone').errors?.pattern">
+                        Debe introducir un número válido
+                    </span>
+                </div>
             </div>
             <div class="form-group col-md-6">
                 <label>Rama</label>
