--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" novalidate (ngSubmit)="onSave()" class="mt-4 mb-4">
+<form [formGroup]="registerForm" novalidate (ngSubmit)="onSave()" class="mt-4 mb-4" method="POST">
     <div class="form-row">
         <div class="form-group col-md-4 mx-auto">
             <label>E-mail:</label>
