--- a/src/app/app-component/app.component.html
+++ b/src/app/app-component/app.component.html
@@ -1,7 +1,6 @@
-<div>
-<app-navbar></app-navbar>
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+<app-navbar>
+</app-navbar>
+
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
-</div>
