--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,47 +1,59 @@
-<form [formGroup]="registerForm" novalidate (ngSubmit)="onSave()" class="mt-4 mb-4" method="POST">
-    <div class="form-row">
-        <div class="form-group col-md-4 mx-auto">
-            <label>E-mail:</label>
-            <input type="email" class="form-control" placeholder="email" formControlName="email" [class]="isValidField('email')">
-            <div class="invalid-feedback">
-                <span *ngIf="registerForm.get('email').errors?.required">
+<div class="container my-3">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header  bg-info ">
+                    <h2 class="card-title text-white mb-0">Registro</h2>
+                </div>
+                <div class="card-body"></div>
+                <form [formGroup]="registerForm" novalidate (ngSubmit)="onSave()" class="mt-4 mb-4" method="POST">
+                    <div class="form-row">
+                        <div class="form-group col-md-8 mx-auto">
+                            <label>E-mail:</label>
+                            <input type="email" class="form-control" formControlName="email" [class]="isValidField('email')">
+                            <div class="invalid-feedback">
+                                <span *ngIf="registerForm.get('email').errors?.required">
                     Por favor introduzca su E-mail
                 </span>
-            </div>
-            <div class="invalid-feedback">
-                <span *ngIf="registerForm.get('email').errors?.pattern">
+                            </div>
+                            <div class="invalid-feedback">
+                                <span *ngIf="registerForm.get('email').errors?.pattern">
                     Por favor introduzca su E-mail correctamente
                 </span>
-            </div>
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-4 mx-auto">
-            <label>Contraseña:</label>
-            <input type="password" class="form-control" formControlName="password" [class]="isValidField('password')">
-            <div class="invalid-feedback">
-                <span *ngIf="registerForm.get('password').errors?.required">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-8 mx-auto">
+                            <label>Contraseña:</label>
+                            <input type="password" class="form-control" formControlName="password" [class]="isValidField('password')">
+                            <div class="invalid-feedback">
+                                <span *ngIf="registerForm.get('password').errors?.required">
                     Por favor introduzca su contraseña.
                 </span>
-            </div>
-            <div class="invalid-feedback">
-                <span *ngIf="registerForm.get('password').errors?.pattern">
+                            </div>
+                            <div class="invalid-feedback">
+                                <span *ngIf="registerForm.get('password').errors?.pattern">
                     Use minimo 8 caracteres.
                 </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-8 mx-auto">
+                            <label>Seleccione el tipo:  </label>
+
+                            <select name="tipo">
+                              <option value="student">Alumno</option>
+                              <option value="company">Empresa</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mx-auto">
+                        <button type="submit " class="btn btn-primary btn-block ">Registrarse</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
-    <div class="form-row">
-        <div class="form-group col-md-4 mx-auto">
-            <label>Seleccione el tipo de usuario: </label>
-            <br>
-            <select name="tipo">
-              <option value="student">Alumno</option>
-              <option value="company">Empresa</option>
-            </select>
-        </div>
-    </div>
-    <div class="col-md-4 mx-auto">
-        <button type="submit " class="btn btn-primary btn-block ">Registrarse</button>
-    </div>
-</form>
+</div>
