--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -7,19 +7,19 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <!-- Menu -->
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-    <ul class="navbar-nav">
-      <li *ngIf="!isLogin()" class="nav-item">
-        <a class="nav-link" routerLink="/login">Login</a>
-      </li>
-      <li *ngIf="!isLogin()" class="nav-item">
-        <a class="nav-link" href="#">Registro</a>
-      </li>
-      <li *ngIf="isLogin()" class="nav-item">
-        <a class="nav-link" (click)="onLogout()" role="button">Salir
-          <svg class="bi text-white" width="16" height="16" fill="currentColor">
-            <use xlink:href="bootstrap-icons.svg#box-arrow-right" />
+    <!-- Menu -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <li *ngIf="!isLogin()" class="nav-item">
+                <a class="nav-link" routerLink="/login">Login</a>
+            </li>
+            <li *ngIf="!isLogin()" class="nav-item">
+                <a class="nav-link" routerLink="/registro">Registro</a>
+            </li>
+            <li *ngIf="isLogin() " class="nav-item ">
+                <a class="nav-link " (click)="onLogout() " role="button ">Salir
+          <svg class="bi text-white " width="16 " height="16 " fill="currentColor ">
+            <use xlink:href="bootstrap-icons.svg#box-arrow-right " />
           </svg>
         </a>
             </li>
